--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,16 @@
 body {
-    font-family: 'Rye', cursive;
+    font-family: 'Rye', serif;
+}
+
+img {
+    width: 50%;
+    height: auto;
+    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    
 }
 
 .hide {
@@ -30,5 +41,13 @@ h1 {
 
 #reset-container {
     text-align: center;
-    /* padding: 2em; */
-} 
+    padding: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#reset-button {
+    margin-top: 1em;
+
+}
