--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,30 @@
+html {
+    background-image: url("../images/background.jpg");
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+html::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.05);
+    filter: grayscale(90%);
+    opacity: .1;
+    z-index: -1;
+}
+
 body {
     font-family: 'Rye', serif;
 }
 
 img {
-    width: 50%;
-    height: auto;
+    width: 40%;
+    height: 40%;
     max-width: 100%;
     display: block;
     margin: 0 auto;
@@ -17,15 +37,18 @@ img {
     display: none;
 }
 
-.left {
+div.left {
     float: inline-start;
-    padding: 5em;
+    padding-top: 1em;
+    padding-left: 5em;
     text-align: center;
 }
 
-.right {
+div.right {
     float: inline-end;
-    padding: 5em;
+    padding-top: 1em;
+    padding-right: 5em;
+    /* margin-right: 5em; */
     text-align: center;
 }
 
@@ -41,7 +64,7 @@ h1 {
 
 #reset-container {
     text-align: center;
-    padding: 2em;
+    padding: 1em;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,4 +73,10 @@ h1 {
 #reset-button {
     margin-top: 1em;
 
+}
+
+button {
+    font-size: 1.2em;
+    border-radius: 20%;
+    padding: 10px 10px;
 }
