--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url("../images/background.jpg");
+    background-image: url("../images/background.png");
     background-position: center;
     background-size: cover;
     position: relative;
