--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,98 +5,82 @@ html {
     position: relative;
 }
 
-html::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.05);
-    filter: grayscale(90%);
-    opacity: .1;
-    z-index: -1;
-}
-
 body {
     font-family: 'Rye', serif;
-}
-
-img {
-    width: 50%;
-    height: 50%;
-    max-width: 100%;
-    display: block;
-    margin: 0 auto;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-    
 }
 
 .hide {
     display: none;
 }
 
-.show {
-    display: block;
-}
-
-div.left {
-    float: inline-start;
-    padding-top: 1em;
+.left {
+    float: left;
     padding-left: 5em;
     text-align: center;
+    font-size: larger;
 }
 
-div.right {
-    float: inline-end;
-    padding-top: 1em;
+.right {
+    float: right;
     padding-right: 5em;
     text-align: center;
+    font-size: larger;
 }
 
 .clear {
     clear: both;
 }
 
+#reset-container,
 h1 {
     text-align: center;
-    padding: 1em;
-    font-size: 4rem;
-}
-
-#target-container {
-    position: relative;
-    display: inline-block;
-}
-
-/* #target-image, #hit-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-} */
-
-#reset-container {
-    text-align: center;
-    padding: 1em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#reset-button {
-    margin-top: 1em;
-
-#winner {
-    text-align: center;
-    padding: 1em;
-    
-}
-
+    padding: 1em
 }
 
 button {
-    font-size: 1.2em;
-    border-radius: 20%;
+    font-size: 1em;
+    border-radius: 10%;
     padding: 5px 5px;
+}
+
+.target-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1em;
+}
+
+.target {
+    position: relative;
+    width: 100%;
+    max-width: 500px;
+    height: 200px;
+    text-align: center;
+    margin: 0 auto;
+    transition: transform 0.5s;
+    transform-style: preserve-3d;
+}
+
+.target>div {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+    transition: transform 0.5s;
+}
+
+.target-nohit,
+.target-hit {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.target-nohit {
+    transform: rotateY(0deg);
+}
+
+.target-hit {
+    transform: rotateY(180deg);
 }
